<resources>
    <!--Main-->
    <string name="app_name">Anabeesh</string>
    <!--FaceBook-->
    <string name="facebook_app_id">1986119151638876</string>
    <string name="fb_login_protocol_scheme">fb1986119151638876</string>

    <!--Landing page-->
    <string name="continue_with_facebook">تابع بواسطة فيسبوك</string>
    <string name="continue_with_google_plus">تابع بواسطة جوجل بلس</string>
    <string name="or">أو</string>
    <string name="create_new_account">انشئ حساب جديد</string>
    <string name="already_a_user">لديك حسـاب؟</string>
    <string name="sign_in">سجـل دخـول</string>
    <string name="anabeesh_logo_content_description">لوجو أنابيـش</string>

    <!--Login-->
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="forgot_password"><u>نسيت كلمة المرور؟</u></string>
    <string name="login">تسجيل الدخول</string>

    <!--Registration-->
    <string name="first_name">الإسم الأول</string>
    <string name="last_name">إسم العائلة</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="register">تسجيل</string>
    <string name="what_is_your_email">ما هو بريدك الالكتروني؟</string>
    <string name="confirm_email">ستحتاج الي ان تأكد هذا البريد الاكتروني لاحقا</string>
    <string name="pick_password">اختر كلمة مرور</string>
    <string name="use_eight_characters">استخدم ثمانية احرف علي الاقل</string>
    <string name="next">التالـي</string>

    <!--Home-->
    <string name="ask_or_search_for_any_question">اسأل او ابحث عن اي سؤال…</string>
    <string name="good_morning">Good morning,</string>
    <string name="profile">الملف الشخصي</string>
    <string name="notification">الاشعارات</string>

    <!--Login-->
    <string name="loading">جاري التحميل..</string>
    <string name="incorrect_inputs">البيانات غير صحيحة</string>
    <string name="incorrect_email">البريد الالكتروني غير صحيح</string>
    <string name="incorrect_password">كلمة المرور غير صحيحة</string>
    <string name="done">تم بنجاح</string>
    <string name="network_error">خطأ بالشبكة</string>
    <string name="title_activity_home">HomeActivity</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_home">الرئيسية</string>
    <string name="user_bookmark">المفضله</string>
    <string name="user_interest">الإهتمامات</string>
    <string name="user_settings">الإعدادات</string>
    <string name="user_drafts">مسوده</string>
    <string name="user_profile">حسابي</string>
    <string name="exit">الخروج</string>

    <!--Categories-->
    <string name="user_following">متابع</string>
    <string name="user_not_following">تابع</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Home Page-->
    <string name="home_page">الرئيسيه</string>

    <!--Logout-->
    <string name="logout_message">هل حقا تريد الخروج ؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>

    <!--Profile-->
    <string name="save_changes">حفظ التغييرات</string>
    <string name="notify_of_changes">بالضغط علي نعم لن يتم حفظ التغييرات</string>
    <string name="notify">تنبيه</string>
    <string name="ok">حسنا</string>
    <string name="not_valid_fields">يوجد بعض المحتويات غير صحيحه</string>
    <string name="not_valid_user">المستخدم غير موجود</string>


    <!--intrasting-->
    <string name="intrastes">الاهتمامات</string>
    <string name="itnrestesText">لنري ما هي اهتماماتك ؟</string>
    <!-- Expert Home-->
    <string name="expert_name">Omar Mahmmoud Salem</string>
    <string name="article_description">Android Development This day became more  proffsional  because this libs. that make it so efficiency like Rxjava,Rxandroid and Glide  </string>
    <string name="viewmore">المزيد</string>
    <string name="post_tittle">android architecture components</string>
    <string name="post_description">A collection of libraries that help you design robust A collection of libraries that help you design robustA collection of libraries that help you design robust</string>
    <string name="poster_name">Omar Salem</string>
    <!--Write Article Activity-->
    <string name="article_tittle">العنوان</string>
    <string name="post_article">نشر</string>
    <string name="article_body">المحتوي</string>

    <!--All Article Activity-->
    <string name="allarticles">المقالات</string>
    <string name="question_details">تفاصيل السؤال</string>


</resources>
