<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout_container_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".beshary.ui.login.LoginActivity">

    <TextView
        android:id="@+id/tv_email"
        style="@style/LoginTextViewLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_micro"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_extra"
        android:labelFor="@id/et_email"
        android:text="@string/email" />

    <com.rxmuhammadyoussef.core.widget.rxedittext.email.EmailEditText
        android:id="@+id/et_email"
        style="@style/LoginEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginLoginEditText"
        android:layout_marginEnd="@dimen/marginLoginEditText"
        android:layout_marginStart="@dimen/marginLoginEditText"
        tools:text="Muhammadyoussef.27@gmail.com" />

    <TextView
        android:id="@+id/tv_email_description"
        style="@style/RegisterTextViewSubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_micro" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/LoginTextViewLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_micro"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_micro"
        android:labelFor="@id/et_password"
        android:text="@string/password" />

    <com.rxmuhammadyoussef.core.widget.rxedittext.password.PasswordEditText
        android:id="@+id/et_password"
        style="@style/LoginEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginLoginEditText"
        android:layout_marginStart="@dimen/marginLoginEditText"
        tools:text="12345678" />

    <TextView
        android:id="@+id/tv_password_description"
        style="@style/RegisterTextViewSubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_micro" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/LoginTextViewSubTextClickableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/marginBottomLoginButton"
        android:layout_marginEnd="@dimen/marginEndLoginButton"
        android:layout_marginStart="@dimen/marginStartLoginButton"
        android:layout_marginTop="@dimen/marginTopLoginButton"
        android:text="@string/login"
        android:enabled="false"/>
</LinearLayout>
